sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:6: error: not found: value isechange
		isechange = false
                ^AlgCocktailSort2:10: error: not found: value isechange
				isechange = true
                                ^AlgCocktailSort2:17: error: not found: value isechange
				isechange = true
                                ^AlgCocktailSort2:21: error: not found: value isechange
	} while(isechange)
                ^